--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <title>CS 414 Spaghetti Coders</title>
     </head>
-    <body>
+    <body style="background-color: #03460D">
         <div id='root'></div>
         <script type='text/javascript' src='bundle.js' charset='utf-8'></script>
     </body>
